@@ -1,3 +1,12 @@
+Sat Jul 21 13:18:48 GMT 2012  Olly Betts <olly@survex.com>
+
+	* lua/docs/examples/simpleexpand.lua,
+	  lua/docs/examples/simplematchdecider.lua,
+	  lua/docs/examples/simplesearch.lua: query:get_description() should
+	  be str(query).  Fixes #600.
+	* lua/docs/index.html: Document that get_description() is mapped to
+	  str(), and end() to _end().
+
 Thu Jul 12 05:11:26 GMT 2012  Olly Betts <olly@survex.com>
 
 	* configure.ac: Overhaul checking the C# tools to use modern names in
